# eve_item_parser

./: Cargo.toml  README.md  build.rs
eve-item-parser-cli/: Cargo.toml
eve_item_parser_cli/: Cargo.toml
eve_item_parser_cli/src/: main.rs
eve_item_parser_wasm/: Cargo.toml  README.md
eve_item_parser_wasm/src/: lib.rs
src/: lib.rs
