[package]
name = "eve_item_parser"
authors = ["Michael Dresser <michaelmdresser@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version = "0.11.1" }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
phf = { version = "0.11.1" }
phf_codegen = "0.11.1"
csv = "1.2"
